# veckans

./: .gitignore  CLAUDE.md  DELIVERY_SUMMARY.md  Dockerfile  FORECASTING_README.md  IMPLEMENTATION_SUMMARY.md  PRE_PRESENTATION_CHECKLIST.md  QUICKSTART.md  README.md  WEEK_ALIGNMENT.md  pyproject.toml  requirements.txt
.claude/agents/: principal-data-scientist.md  senior-code-reviewer.md  senior-software-engineer.md
data/: weekly_deals.xlsx  ~$weekly_deals.xlsx
src/: azure_datalake_connector.py  config.py  config_forecast.py  data_test.py  fetch_data.py  forecast.py  forecast_old.py  main.py  preprocess.py  tune.py  validate_historical.py
src-old/: azure_datalake_connector.py  cluster_sales.py  combined_sales.py  fetch_data.py  item_sales.py  main.py  preprocess.py
src-old2/: azure_datalake_connector.py  config.py  config_forecast.py  fetch_data.py  forecast.py  investigate_data.py  preprocess.py  validate.py  validate_fetch.py
