[project]
name = "veckans"
version = "0.1.0"
description = ""
authors = [
    {name = "Pierre Rudin",email = "pierre.rudin@martinservera.se"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "azure-storage-file-datalake (>=12.21.0,<13.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "deltalake (>=1.1.4,<2.0.0)",
    "adlfs (>=2025.8.0,<2026.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
